# habit-ai

./: .env.example  .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml  tsconfig.json  turbo.json
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  main.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/components/: hearing-view.tsx
apps/desktop/src/lib/: app-context.tsx  database.ts  seed-demo.ts
apps/mobile/: app.json  package.json  tsconfig.json
apps/mobile/app/: _layout.tsx  index.tsx  onboarding.tsx
apps/mobile/app/(tabs)/: _layout.tsx  hearing.tsx  timeline.tsx  today.tsx  wants.tsx  you.tsx
apps/mobile/app/day/: [date].tsx
apps/mobile/components/: check-in-section.tsx  check-in-wizard.tsx  chips.tsx  keyboard.tsx  mood-slider.tsx  screen-header.tsx  select-field.tsx  spend-form.tsx  ui.tsx
apps/mobile/lib/: app-context.tsx  check-in-steps.ts  database.ts  navigation.ts  supabase.ts  use-keyboard.ts
scripts/: print-expo-url.mjs
supabase/migrations/: 001_initial.sql
